# CarND-MPC-Quizzes

./: README.md  log.txt
global_kinematic_model/src/: main.cpp
ipopt_example/: CMakeLists.txt
ipopt_example/src/: example.cpp  get_started.cpp
matplotlib_cpp_example/: CMakeLists.txt  animation.cpp  example.cpp
mpc_to_line/: CMakeLists.txt
mpc_to_line/solution/: MPC.cpp
mpc_to_line/src/: MPC.cpp  MPC.h  MPC_traj.cpp  _matplotlibcpp.h  helpers.h  main.cpp  main_traj.cpp  sys_info.cpp
mpc_to_traj/: CMakeLists.txt
mpc_to_traj/include/: MPC.h  MPCQD.h  MPCQP.h  circular_traj.h  traj_helper.h
mpc_to_traj/src/: MPC.cpp  MPC.cpp,bak  MPCQD.cpp  circle_main.cpp  circular_traj.cpp  diagonal_main_qd.cpp  diagonal_traj.cpp  l_shape_traj.cpp  line_main.cpp  line_main_qd.cpp  line_traj.cpp  main.cpp  square_main_qd.cpp  square_shape_traj.cpp
polyfit/: CMakeLists.txt
polyfit/include/: matplotlibcpp.h
polyfit/src/: third_poly.cpp
